playground/index.css
body {
	background: var(--m-color-main-paper);
	color: var(--m-color-main-ink);
}

.surface {
	padding: var(--m-surface-padding);
	border-radius: var(--m-surface-borderRadius);

	&[data-emphasis='primary'] {
		@apply --mx-bg(var(--m-surface-primary-color-bg));
		@apply --mx-fg(var(--m-surface-primary-color-fg));
	}
	&[data-emphasis='secondary'] {
		@apply --mx-bg(var(--m-surface-secondary-color-bg));
		@apply --mx-fg(var(--m-surface-secondary-color-fg));
	}
	&[data-emphasis='ambient'] {
		@apply --mx-bg(var(--m-surface-ambient-color-bg));
		@apply --mx-fg(var(--m-surface-ambient-color-fg));
	}
}

.button,
button {
	padding: var(--m-action-padding);
	border-radius: var(--m-action-borderRadius);
	border: 1px solid var(--ref-system-borderColor-all);
	font-size: var(--m-text-secondary-size);
	font-weight: var(--m-text-secondary-weight);
	line-height: 1;
	transition: all 0.2s ease;
	cursor: pointer;
	@apply --mx-bg(var(--m-action-primary-color-bg));
	@apply --mx-fg(var(--m-action-primary-color-fg));
	@apply --mx-border(var(--m-action-primary-color-border));
	@apply --mx-shadow;
	--mx-shadow-shadow: var(--m-shadow-md-compiled);

	&[data-emphasis='primary'] {
		@apply --mx-bg(var(--m-action-primary-color-bg));
		@apply --mx-fg(var(--m-action-primary-color-fg));
		@apply --mx-border(var(--m-action-primary-color-border));
	}
	&[data-emphasis='secondary'] {
		@apply --mx-bg(var(--m-action-secondary-color-bg));
		@apply --mx-fg(var(--m-action-secondary-color-fg));
		@apply --mx-border(var(--m-action-secondary-color-border));
	}
	&[data-emphasis='ambient'] {
		@apply --mx-bg(var(--m-action-ambient-color-bg));
		@apply --mx-fg(var(--m-action-ambient-color-fg));
		@apply --mx-border(var(--m-action-ambient-color-border));
		--mx-shadow-shadow: 0 0 0 0 transparent;

		&:hover,
		&:focus {
			@apply --mx-bg(inherit);
		}
	}

	&:hover {
		--ref-system-bg: --fn-darken-color(var(--ref-system-bg-applied), 2);
		--mx-shadow-ring: --fn-ring(var(--ref-system-bg), 4px);
	}
	&:active {
		--ref-system-bg: --fn-darken-color(var(--ref-system-bg-applied), 4);
		--mx-shadow-ring: --fn-ring(var(--ref-system-bg), 6px);
	}
	&:focus {
		outline: none;
	}
	&:focus-visible {
		--ref-system-bg: --fn-lighten-color(var(--ref-system-bg-applied), 2);
		--mx-shadow-ring: --fn-ring(var(--m-color-main-ink), 2px);
	}
}

.input,
input {
	padding: var(--m-control-padding);
	border-radius: var(--m-control-borderRadius);
	border: 1px solid var(--ref-system-borderColor-all);
	font-size: var(--m-text-secondary-size);
	font-weight: var(--m-text-secondary-weight);
	line-height: var(--m-text-secondary-lineHeight);
	@apply --mx-bg(var(--m-control-color-bg));
	@apply --mx-fg(var(--m-control-color-fg));
	@apply --mx-border(var(--m-control-color-border));

	@apply --mx-shadow;
	--mx-shadow-shadow: var(--m-shadow-sm-compiled);

	&:hover {
		--ref-system-bg: --fn-darken-color(var(--m-control-color-bg), 1);
		--ref-system-borderColor-all: --fn-darken-color(
			var(--m-control-color-border),
			2
		);
		--mx-shadow-ring: --fn-ring(var(--m-color-main-heavy), 2px);
	}
	&:focus {
		outline: none;
	}
	&:focus-visible {
		--mx-shadow-ring: --fn-ring(var(--m-color-main-heavy), 4px);
	}
}

.title,
h1 {
	font-size: var(--m-text-primary-size);
	font-weight: var(--m-text-primary-weight);
	line-height: var(--m-text-primary-lineHeight);
	font-family: var(--m-text-primary-font);
}

.p,
p {
	font-size: var(--m-text-secondary-size);
	font-weight: var(--m-text-secondary-weight);
	line-height: var(--m-text-secondary-lineHeight);
	font-family: var(--m-text-secondary-font);
}

.caption,
small {
	font-size: var(--m-text-ambient-size);
	font-weight: var(--m-text-ambient-weight);
	line-height: var(--m-text-ambient-lineHeight);
	font-family: var(--m-text-ambient-font);
}

